<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/mapViewContainer"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="2dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_border_red_shape"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/mapViewContainer">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CustomTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/init_going_travel_text"
            android:textSize="@dimen/bigger_text" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/timeToStartTaskTv"
            style="@style/CustomTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/time_to_start_text1"
            android:textSize="@dimen/bigger_text" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/confirmStartGoingTravelTv"
            style="@style/CustomTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/confirm_start_going_travel_text"
            android:textSize="@dimen/bigger_text" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                app:layout_constraintEnd_toStartOf="@+id/startBtn" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/startBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_text"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>